2002-05-13  Roland McGrath  <roland@frob.com>

	* netfs.h (struct node): New member `nn_translated'.
	* dir-lookup.c (netfs_S_dir_lookup): Examine that in place of
	nn_stat.st_mode to decide if there is a passive translator.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* io-version.c: New file.
	* Makefile (IOSRCS): Add io-version.c.
	* fsstubs.c (netfs_S_io_server_version): Function removed.
	* netfs.h (netfs_server_name, netfs_server_version): New external
	variables to be defined by the user.

2002-05-11  Roland McGrath  <roland@frob.com>

	* trans-callback.c (_netfs_translator_callback1_fn): Add an assert
	that netfs_get_translator not fail with EOPNOTSUPP.

2002-05-07  Roland McGrath  <roland@frob.com>

	* fsys-getroot.c (netfs_S_fsys_getroot): Fix arg type in decl.
	* append-std-options.c (netfs_append_std_options): Likewise.

	* file-exec.c (netfs_S_file_exec): u_int -> size_t in decl.
	* netfs.h (netfs_append_args): unsigned -> size_t in decl.

2002-05-04  Roland McGrath  <roland@frob.com>

	* io-restrict-auth.c (netfs_S_io_restrict_auth): Use
	iohelp_restrict_iouser.

2002-03-9  James A. Morrison <ja2morri@uwaterloo.ca>

 	* init-startup (netfs_startup): Use err, not errno.

2001-12-22  Roland McGrath  <roland@frob.com>

	* priv.h (begin_using_protid_port): Change extern inline decl
	into static inline with __attribute__ ((unused))
	(end_using_protid_port): Likewise.

2001-08-31  Marcus Brinkmann  <marcus@gnu.org>

	* file-get-translator.c (netfs_S_file_get_translator): If
	asprintf() fails, set ERR to errno.
	* dir-lookup.c (netfs_S_dir_lookup): Catch if asprintf() fails and
	return ENOMEM.  If netfs_make_protid() fails, set ERROR to errno,
	not ENOMEM.  Do this before freeing USER.
	* dir-mkfile.c (netfs_S_dir_mkfile): If netfs_make_protid() fails,
	set ERROR to errno and free USER.
	* file-exec.c (netfs_S_file_exec): Likewise.
	Reported by Igor Khavkine <i_khavki@alcor.concordia.ca>.

2001-06-21  Neal H Walfield  <neal@cs.uml.edu>
